[package]
name = "kvs"
authors = ["ALiang <coder_wclong@163.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_repr = "0.1"
bincode = "1.3.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
